src/sass/partials/_portfoliocard.scss
/************************/
/*PORTFOLIO CARDS*/
/************************/
.cg-portfolio {
  background-color: #fff;
  padding: 7em 2em 5em 2em;
  overflow: hidden;

  @media (min-width: 500px) {
    padding: 7em 5em 5em 5em;
  }
}

.portfolio-wrapper {
  position: relative;
  top: 0;
  transition: all 0.3s;
}

.cg-project-error {
  text-align: center;
  margin-top: 50px;
}

.container-fluid .mix {
  display: none;
  width: 98%;
  margin: 1em 1%;

  @media (min-width: 800px) {
    width: 47%;
  }

  @media (min-width: 1100px) {
    width: 31%;
  }
}

.cg-mixitup-img {
  width: 100%;
}

.expand-wrapper {
  position: relative;
  top: 120px;
  opacity: 0;
  visibility: hidden;
  height: 0;
  transition: all 0.3s;
}

span.fa-times {
  position: absolute;
  top: 5px;
  right: 5px;
  font-size: 3em;
  cursor: pointer;
  color: #fd7d5f;
  background-color: #fff;
  padding: 0 5px;
  border-radius: 5px;
}

.cg-new {
  color: #fff;
  background-color: #0099ff;
  font-size: 1.5em;
  padding: 5px 10px;
  margin-left: 10px;
  margin-top: 20px;
  border-radius: 5px;
  border: none;
}

.cg-edit-small {
  position: absolute;
  top: 5px;
  right: 5px;
  background-color: #fd7d5f;
  padding: 5px;
  border-radius: 5px;
  color: #fff;
  z-index: 10;

  @media (min-width: 544px) {
    right: 25px;
  }
}

.cg-project-main {
  position: relative;
  cursor: pointer;
}

.cg-expand-image {
  width: 100%;
  height: 300px;
  background-repeat: no-repeat;
  background-size: cover;
  background-position: top;
  border-radius: 5px 5px 0 0;

  @media (min-width: 1000px) {
    height: 500px;
  }
}

.cg-project-details {
  margin: 0 !important;
}

.cg-project-details img {
  width: 100%;
}

.fade-out {
  top: 120px !important;
  opacity: 0 !important;
  visibility: hidden !important;
  height: 0 !important;
  transition: all 0.3s !important;
}

.fade-in {
  top: 0 !important;
  opacity: 1 !important;
  visibility: visible !important;
  height: auto !important;
  transition: all 0.3s !important;
}

.card-block {
  position: relative;
}

.card-title {
  margin-top: 30px;

  @media (min-width: 800px) {
    margin-top: 0;
  }
}

.cg-github-repo {
  position: relative;
  display: block;
  margin-bottom: 10px;
  padding: 10px 20px;
  border: 2px solid #fd7d5f;
  border-radius: 5px;
  color: #fd7d5f;
  text-decoration: none;
  text-align: center;
  transition: all 0.3s;

  @media (min-width: 400px) {
    display: inline-block;
  }

  @media (min-width: 800px) {
    float: right;
  }
}

.cg-github-repo:hover {
  text-decoration: none;
  color: #666;
  transition: all 0.3s;
}

.cg-live-link {
  position: relative;
  display: block;
  padding: 10px 20px;
  border: 2px solid #0099ff;
  border-radius: 5px;
  color: #0099ff;
  text-decoration: none;
  text-align: center;
  transition: all 0.3s;

  @media (min-width: 400px) {
    display: inline-block;
  }

  @media (min-width: 800px) {
    float: right;
    margin-right: 5px;
  }
}

.cg-live-link:hover {
  text-decoration: none;
  color: #666;
  transition: all 0.3s;
}

.card-text .fa-check-circle {
  color: #14aa13;
}

.cg-tags {
  margin-right: 5px;
  background-color: #666;
  color: #fff;
  padding: 2px 5px;
  border-radius: 5px;
}

.controls {
  position: relative;
  top: 0;
  left: 50%;
  width: 310px;
  margin-left: -155px;
}

.controls label {
  position: relative;
  border-radius: 5px;
  padding: 5px 50px 5px 20px;
  background-color: transparent;
  border: 3px solid #fd7d5f;
  margin: 0 5px;
  font-size: 1.2em;
  cursor: pointer;
}

.controls label::before {
  content: '';
  position: absolute;
  top: 18px;
  right: 20px;
  width: 20px;
  height: 3px;
  background-color: #fd7d5f;
  transform: rotate(45deg);
  transition: all 0.3s;
}

.controls label::after {
  content: '';
  position: absolute;
  top: 18px;
  right: 7px;
  width: 20px;
  height: 3px;
  background-color: #fd7d5f;
  transform: rotate(-45deg);
  transition: all 0.3s;
}

.controls label.rotate::before {
  content: '';
  position: absolute;
  top: 18px;
  right: 20px;
  width: 20px;
  height: 3px;
  background-color: #fd7d5f;
  transform: rotate(-45deg);
  transition: all 0.3s;
}

.controls label.rotate::after {
  content: '';
  position: absolute;
  top: 18px;
  right: 7px;
  width: 20px;
  height: 3px;
  background-color: #fd7d5f;
  transform: rotate(45deg);
  transition: all 0.3s;
}

.controls li {
  padding: 10px 0;
  background-color: #fff;
  border-bottom: 2px solid #666;
  font-size: 1em;
  text-align: center;
  list-style: none;
  cursor: pointer;

  @media (min-width: 350px) {
    font-size: 1.2em;
  }
}

.controls li:last-child {
  border-bottom: none;
}

.cg-filter, .cg-sort {
  padding: 0;
  z-index: 1000;
}

.cg-filter {
  position: absolute;
  top: 20px;
  left: 12px;
  width: 130px;
  border: 3px solid #fd7d5f;
  border-radius: 5px;
  opacity: 0;
  transition: all 0.3s;

  @media (min-width: 350px) {
    width: 180px;
    left: -32px;
  }
}

.cg-sort {
  position: absolute;
  top: 20px;
  right: 28px;
  width: 100px;
  border: 3px solid #fd7d5f;
  border-radius: 5px;
  opacity: 0;
  transition: all 0.3s;

  @media (min-width: 350px) {
    width: 150px;
    right: -2px;
  }
}

.fade-controls {
  top: 50px;
  opacity: 1;
  transition: all 0.3s;
}

.show-more {
  position: relative;
  top: 0;
  left: 50%;
  width: 200px;
  margin-left: -100px;
  padding: 10px 20px;
  outline: none;
  border: none;
  border-radius: 5px;
  background-color: transparent;
  border: 3px solid #fd7d5f;
}

// SPINNER
.loader-container {
  padding: 70px 0;
}

.spinner-hide {
  display: none;
}

.spinner-show {
  display: block;
}

.loader-visible {
  display: block;
}

.loader-hidden {
  display: none;
}

.cg-heart-container {
  position: absolute;
  right: 40px;
  bottom: 15px;
  padding: 5px;
  color: #818a91;
  cursor: pointer;
  z-index: 10;
}

.cg-thankyou {
  position: absolute;
  top: -25px;
  left: -25px;
  width: 95px;
  opacity: 0;
  visibility: hidden;
  padding: 0 5px;
  background-color: #000;
  color: #fff;
  border-radius: 5px;

  &::after {
    content: '';
    position: absolute;
    top: 24px;
    left: 50%;
    margin-left: -5px;
    border-top: 7px solid #000;
    border-left: 7px solid transparent;
    border-right: 7px solid transparent;
  }

  &.visible {
    animation: revealThankYou 5s;
  }
}

@keyframes revealThankYou {
  0% {
    opacity: 0;
    visibility: hidden;
  }
  50% {
    opacity: 1;
    visibility: visible;
  }
  100% {
    opacity: 0;
    visibility: hidden;
  }
}

